custom-config/yaml_backup/wait-pod-sc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wait-pod
spec:
  containers:
  - name: test-container
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: test-volume
      mountPath: /data
  volumes:
  - name: test-volume
    persistentVolumeClaim:
      claimName: wait-pvc
