custom-config/yaml_backup/old-install-ingress-controller-haproxy.yaml
---
# Source: kubernetes-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-haproxy-kubernetes-ingress
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: my-haproxy
    helm.sh/chart: kubernetes-ingress-1.52.1
    app.kubernetes.io/version: "3.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      appProtocol: https
      targetPort: https
    - name: quic
      port: 443
      protocol: UDP
      appProtocol: https
      targetPort: quic
    - name: stat
      port: 1024
      protocol: TCP
      targetPort: stat
    - name: admin
      port: 6060
      protocol: TCP
      targetPort: admin
  selector:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: my-haproxy
  externalIPs:
---
# Source: kubernetes-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-haproxy-kubernetes-ingress
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: my-haproxy
    helm.sh/chart: kubernetes-ingress-1.52.1
    app.kubernetes.io/version: "3.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  minReadySeconds: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-ingress
      app.kubernetes.io/instance: my-haproxy
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-ingress
        app.kubernetes.io/instance: my-haproxy
    spec:
      enableServiceLinks: true
      serviceAccountName: my-haproxy-kubernetes-ingress
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        runAsUser:  1000
        runAsGroup: 1000
      
        
      containers:
        - name: kubernetes-ingress-controller
          image: "docker.io/haproxytech/kubernetes-ingress:3.2.12"
          imagePullPolicy: IfNotPresent
          args:
          - --default-ssl-certificate=haproxy-ingress/my-haproxy-kubernetes-ingress-default-cert
          - --configmap=haproxy-ingress/my-haproxy-kubernetes-ingress
          - --http-bind-port=8080
          - --https-bind-port=8443
          - --quic-bind-port=8443
          - --quic-announce-port=443
          - --ingress.class=haproxy
          - --publish-service=haproxy-ingress/my-haproxy-kubernetes-ingress
          - --log=info
          - --prometheus
          - --pprof
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: admin
              containerPort: 6060
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: stat
              containerPort: 1024
              protocol: TCP
            - name: quic
              containerPort: 8443
              protocol: UDP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /run
              subPath: run
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
---
# Source: kubernetes-ingress/templates/controller-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: my-haproxy
    helm.sh/chart: kubernetes-ingress-1.52.1
    app.kubernetes.io/version: "3.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  controller: haproxy.org/ingress-controller/haproxy
