custom-config/yaml_backup/svc-ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external-lb
  namespace: default
  labels:
    app: nginx-test
spec:
  type: ClusterIP  # LoadBalancer에서 ClusterIP로 변경됨
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    role: web      # 파드와 연결되는 핵심 라벨
