custom-config/yaml_backup/ingress-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  # 아래 어노테이션 대신 필드를 사용
spec:
  ingressClassName: haproxy  # <--- 이 부분이 핵심입니다
  rules:
  - host: longhorn.batmi.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
