custom-config/yaml_backup/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-haproxy-ingress
  namespace: default
spec:
  # HAProxy가 이 Ingress 규칙을 담당하도록 클래스 지정
  ingressClassName: haproxy 
  rules:
  - host: nginx.batmi.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-external-lb # 1단계에서 ClusterIP로 변경한 백엔드 서비스
            port:
              number: 80
